🌐 Update constant strings

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Artists",
   "ARTIST_SINGLE": "Artist",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A to Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCEL",
   "COLLECTION": "Collection",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Do you want to remove this album saved on your device?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Are you sure?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Some insights of the album",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Do you want to delete this playlist?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Are you sure?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tracks",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Do you want to remove this track saved on your device?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Are you sure?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Delete the album \"NAME\"?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Delete",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "COLLECTION_INFO_SUBHEADER": "Some insights of the album",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "More albums",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "More artists",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "More tracks",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Delete the playlist \"NAME\"?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Delete",
   "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
   "COLLECTION_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
   "COLLECTION_SEARCH_WELCOME": "Search albums, tracks or artists...",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Latest album",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Latest artist",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Latest track",
+  "COLLECTION_TRACKS_SUBHEADER": "Tracks",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Delete the track \"NAME\"?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Delete",
   "COMING_UP": "Coming Up",
   "DATE_ADDED": "Date added",
   "DELETE": "Delete",
   "DELETE_TRACK": "Delete track",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
   "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Your recent searches",
   "SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
   "SEARCH_RESULT_LOADER_LABEL": "Getting your music...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Here's a list of what we've found so far",
   "SELECTED_DIRECTORY": "Selected directory:",
   "SETTING": "Settings",
