--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Artistes",
   "ARTIST_SINGLE": "Artiste",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A à Z",
   "BUFFERING": "Tampon...",
   "CANCEL": "ANNULER",
   "COLLECTION": "Collection",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Voulez-vous supprimer cet album enregistré sur votre appareil?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Quelques aperçus de l'album",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette playlist?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Pistes de l'album",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette piste enregistrée sur votre appareil?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Voulez-vous supprimer cet album enregistré sur votre appareil?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "En cours de synchronisation de votre musique local.\nNe fermez pas l'applicatiopn svp.",
+  "COLLECTION_INFO_SUBHEADER": "Quelques aperçus de l'album",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Plus d'album",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Plus d'artistes",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Plus de pistes",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette playlist?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
   "COLLECTION_SEARCH_LABEL": "recherche dans votre collection",
   "COLLECTION_SEARCH_NO_RESULTS": "Rien de tel n'a pu être trouvé dans votre collection",
   "COLLECTION_SEARCH_WELCOME": "Entrez quelque chose à rechercher dans votre collection",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Dernier album",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Dernier artiste",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Dernier piste",
+  "COLLECTION_TRACKS_SUBHEADER": "Pistes de l'album",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Voulez-vous supprimer cette piste enregistrée sur votre appareil?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Êtes-vous sûr?",
   "COMING_UP": "à venir",
   "DATE_ADDED": "Date ajouté",
   "DELETE": "Supprimer",
   "DELETE_TRACK": "Supprimer la piste",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVEUR",
   "DOWNLOAD_UPDATE": "TÉLÉCHARGER LA MISE À JOUR",
   "ENABLE_125_SCALING": "Activer la mise en echelle de 125%.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Vos recherches récentes",
   "SEARCH_NO_RECENT_SEARCHES": "Vos recherches récentes s'afficheront ici",
   "SEARCH_RESULT_LOADER_LABEL": "Obtention de votre musique ...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Dossier selectionnés:",
   "SELECTED_DIRECTORY": "Répertoire sélectionné:",
   "SETTING": "Paramètres",
