--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "कलाकार",
   "ARTIST_SINGLE": "Artist",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A से Z",
   "BUFFERING": "बफर हो रहा है...",
   "CANCEL": "कैंसिल",
   "COLLECTION": "कलेक्शन",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "क्या आप इस एल्बम को डिलीट करना चाहते हैं?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "डिलीट",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "एल्बम के बारे में थोड़ी जानकारी",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "क्या आप इस प्लेलिस्ट को डिलीट करना चाहते हैं?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "डिलीट?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "एल्बम के गाने",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "क्या आप इस गाने को डिलीट करना चाहते हैं?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "डिलीट",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "क्या आप इस एल्बम को डिलीट करना चाहते हैं?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "डिलीट",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "आपका स्थानीय संगीत सिंक्रनाइज़ किया जा रहा है.\nऐप्लिकेशन को बंद करना अच्छा विचार नहीं है!",
+  "COLLECTION_INFO_SUBHEADER": "एल्बम के बारे में थोड़ी जानकारी",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "अन्य एल्बम",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "अन्य कलाकार",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "अन्य गाने",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "क्या आप इस प्लेलिस्ट को डिलीट करना चाहते हैं?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "डिलीट?",
   "COLLECTION_SEARCH_LABEL": "आपके कलेक्शन में खोजें",
   "COLLECTION_SEARCH_NO_RESULTS": "ऐसा कुछ भी नहीं मिला",
   "COLLECTION_SEARCH_WELCOME": "खोजने के लिए कुछ लिखें",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "नयी एल्बम",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "नया कलाकार",
   "COLLECTION_TOP_SUBHEADER_TRACK": "नया गाना",
+  "COLLECTION_TRACKS_SUBHEADER": "एल्बम के गाने",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "क्या आप इस गाने को डिलीट करना चाहते हैं?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "डिलीट",
   "COMING_UP": "अगला आनेवाला",
   "DATE_ADDED": "तिथि",
   "DELETE": "डिलीट",
   "DELETE_TRACK": "गाना डिलीट करें",
+  "DESCENDING": "Descending",
   "DISCORD": "डिस्कॉर्ड सर्वर",
   "DOWNLOAD_UPDATE": "डाउनलोड अपडेट",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "आपके पिछले खोज",
   "SEARCH_NO_RECENT_SEARCHES": "आपके ",
   "SEARCH_RESULT_LOADER_LABEL": "आपका गाना आ रहा है...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Selected directories:",
   "SELECTED_DIRECTORY": "Selected directory:",
   "SETTING": "सेटिंग",
