--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Előadók",
   "ARTIST_SINGLE": "Előadó",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "Ábécérend",
   "BUFFERING": "Betöltés...",
   "CANCEL": "MÉGSE",
   "COLLECTION": "Gyűjtemény",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött albumot az eszközödről?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Egészen biztos?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Pár tudnivaló az albumról",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Törölni akarod ezt a lejátszási listát?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Egészen biztos?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Számok az albumból",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött számot az eszközödről?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Egészen biztos?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött albumot az eszközödről?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Egészen biztos?",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "A helyi fájlok szinkronizálása folyamatban.\nEszedbe se jusson bezárni az appot.",
+  "COLLECTION_INFO_SUBHEADER": "Pár tudnivaló az albumról",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "További albumok",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "További előadók",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "További számok",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Törölni akarod ezt a lejátszási listát?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Egészen biztos?",
   "COLLECTION_SEARCH_LABEL": "Keresés a gyűjteményedben",
   "COLLECTION_SEARCH_NO_RESULTS": "Nincs találat a gyűjteményedben.",
   "COLLECTION_SEARCH_WELCOME": "Mit szeretnél hallgatni a gyűjteményedből?",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Legújabb album",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Legújabb előadó",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Legújabb szám",
+  "COLLECTION_TRACKS_SUBHEADER": "Számok az albumból",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Törölni akarod ezt a letöltött számot az eszközödről?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Egészen biztos?",
   "COMING_UP": "Coming Up",
   "DATE_ADDED": "Hozzáadás dátuma",
   "DELETE": "Törlés",
   "DELETE_TRACK": "Szám törlése",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD SZERVER",
   "DOWNLOAD_UPDATE": "FRISSÍTÉS LETÖLTÉSE",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Legutóbbi keresések",
   "SEARCH_NO_RECENT_SEARCHES": "Itt fognak megjelenni a legutóbbi kereséseid",
   "SEARCH_RESULT_LOADER_LABEL": "Zenék hozzádása folyamatban...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Kiválasztott mappák:",
   "SELECTED_DIRECTORY": "Kiválasztott mappa:",
   "SETTING": "Beállítások",
