--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Rakikira",
   "ARTIST": "Mpanakanto",
   "ARTIST_SINGLE": "Mpanakanto",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A à Z",
   "BUFFERING": "Tampon...",
   "CANCEL": "FOANANA",
   "COLLECTION": "Voangona",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Te hamafa ity rakikira voatahiry ao amin'ny fitaovanao ity ve ianao?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Topi-maso vitsivitsy an'ilay rakikira",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Te hamafa an'ity filaharan-kira ity ve ianao?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Mozika ao amini'ilay rakikira",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Te hamafa ity mozika voatahiry ao amin'ny fitaovanao ity ve ianao?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Te hamafa ity rakikira voatahiry ao amin'ny fitaovanao ity ve ianao?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Mandrindra ny mozika eo an-toerana.\n Aza faranana ny fampiaharana azafady.",
+  "COLLECTION_INFO_SUBHEADER": "Topi-maso vitsivitsy an'ilay rakikira",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Rakikira hafa",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Mpanankato hafa",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Mozika hafa",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Te hamafa an'ity filaharan-kira ity ve ianao?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
   "COLLECTION_SEARCH_LABEL": "karohy ao amin'ny fanangonana anao",
   "COLLECTION_SEARCH_NO_RESULTS": "Tsy misy zavatra toy izany hita ao amin'ny fanangonana anao.",
   "COLLECTION_SEARCH_WELCOME": "Mampidira zavatra ho karohana ao amin'ny fanangonana anao",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Rakikira farany",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Mpanankato farany",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Mozika farany",
+  "COLLECTION_TRACKS_SUBHEADER": "Mozika ao amini'ilay rakikira",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Te hamafa ity mozika voatahiry ao amin'ny fitaovanao ity ve ianao?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Azonao antoka ve izany ?",
   "COMING_UP": "Hoavy",
   "DATE_ADDED": "Nanampy daty",
   "DELETE": "Fafana",
   "DELETE_TRACK": "Fafana ilay piste",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVEUR",
   "DOWNLOAD_UPDATE": "SINTOMY NY FANAVAOZANA VAOVAO",
   "ENABLE_125_SCALING": "Ampandehano ny tohatra manisa 125%.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Ny karoka nataonao tato ho ato",
   "SEARCH_NO_RECENT_SEARCHES": "Hiseho eto ny fikarohana nataonao tato ho ato",
   "SEARCH_RESULT_LOADER_LABEL": "Fahazoana ireo mozikanao ...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Rakitra voafantina:",
   "SELECTED_DIRECTORY": "Lahatahiry voafantina:",
   "SETTING": "Fikirana",
