--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Artiesten",
   "ARTIST_SINGLE": "Artiest",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A tot Z",
   "BUFFERING": "Bufferen...",
   "CANCEL": "ANNULEER",
   "COLLECTION": "Collectie",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Enkele inzichten in het album",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Wilt u deze afspeellijst van uw apparaat verwijderen?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Weet u het zeker?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Hier zijn de nummers die u opgeslagen heeft",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Je lokale muziek wordt gesynchroniseerd. Sluit de app niet af.",
+  "COLLECTION_INFO_SUBHEADER": "Enkele inzichten in het album",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Meer albums",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Meer artiesten",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Meer nummers",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Wilt u deze afspeellijst van uw apparaat verwijderen?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Weet u het zeker?",
   "COLLECTION_SEARCH_LABEL": "Zoek in je collectie",
   "COLLECTION_SEARCH_NO_RESULTS": "Dat kon niet in uw collectie gevonden worden",
   "COLLECTION_SEARCH_WELCOME": "Voer iets in om uw collectie te doorzoeken",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Vorige album",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Vorige artiest",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Vorige nummer",
+  "COLLECTION_TRACKS_SUBHEADER": "Hier zijn de nummers die u opgeslagen heeft",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Wilt u dit album van uw apparaat verwijderen?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Weet u dat zeker?",
   "COMING_UP": "Volgende",
   "DATE_ADDED": "Datum Toegevoegd",
   "DELETE": "Verwijderen",
   "DELETE_TRACK": "Verwijder nummer",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
   "DOWNLOAD_UPDATE": "DOWNLOAD UPDATE",
   "ENABLE_125_SCALING": "Vergroting (125%) inschakelen",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Uw recente zoekopdrachten",
   "SEARCH_NO_RECENT_SEARCHES": "Uw recente zoekopdrachten zullen hier getoond worden",
   "SEARCH_RESULT_LOADER_LABEL": "Uw muziek verkrijgen...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Geselecteerde mappen:",
   "SELECTED_DIRECTORY": "Geselecteerde map:",
   "SETTING": "Instellingen",
