--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Artistas",
   "ARTIST_SINGLE": "Artist",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A à Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCELAR",
   "COLLECTION": "Coleção",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Você tem certeza que quer apagar...",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Alguns insights do álbum",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Você quer remover essa playlist salva no seu dispositivo?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Tem certeza?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Aqui estão algumas músicas salvas por você",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Você tem certeza que quer apagar...",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Deletar esse álbum?",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "COLLECTION_INFO_SUBHEADER": "Alguns insights do álbum",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Aqui estão alguns outros álbuns",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Aqui estão os artistas salvos no seu dispositivo.",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Aqui estão suas outras músicas",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Você quer remover essa playlist salva no seu dispositivo?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Tem certeza?",
   "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
   "COLLECTION_SEARCH_NO_RESULTS": "Nada parecido pôde ser encontrado em sua coleção",
   "COLLECTION_SEARCH_WELCOME": "Adicione algo para pesquisar na sua coleção",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Aqui está o último álbum que você salvou",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Aqui está o último artista que você salvou",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Aqui está a última música que você salvou",
+  "COLLECTION_TRACKS_SUBHEADER": "Aqui estão algumas músicas salvas por você",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Você quer apagar essa música do dispositivo?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Você que apagar?",
   "COMING_UP": "Coming Up",
   "DATE_ADDED": "Data adicionada",
   "DELETE": "Deletar",
   "DELETE_TRACK": "Deletar música",
+  "DESCENDING": "Descending",
   "DISCORD": "SERVIDOR DO DISCORD",
   "DOWNLOAD_UPDATE": "BAIXAR ATUALIZAÇÃO",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Suas buscas recentes",
   "SEARCH_NO_RECENT_SEARCHES": "Suas pesquisas recentes aparecerão aqui",
   "SEARCH_RESULT_LOADER_LABEL": "Baixando sua música...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Selected directories:",
   "SELECTED_DIRECTORY": "Diretório selecionado:",
   "SETTING": "Configurações",
