--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Skladatelji",
   "ARTIST_SINGLE": "Ustvarjalec",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "Od A do Z",
   "BUFFERING": "Bufferanje...",
   "CANCEL": "PREKLIČI",
   "COLLECTION": "Zbirka",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Ali si res prepričan...",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Izbriši ta album?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Nekaj stvari o albumu",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Ali hočeš odstraniti seznam predvajanja?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Ali si prepričan?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Tukaj so shranjene pesmi",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Ali res hočeš izbrisati to pesem?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Ali si res prepričan...",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Izbriši ta album?",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Tvoja kolekcija se sinhronizira z aplikacijo.\nNi dobra ideja, da zapreš aplikacijo.",
+  "COLLECTION_INFO_SUBHEADER": "Nekaj stvari o albumu",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Tukaj so shranjeni albumi",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Tukaj so ustvarjalci, shranjeni v tvoji napravi.",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Here are your other tracks",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Ali hočeš odstraniti seznam predvajanja?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Ali si prepričan?",
   "COLLECTION_SEARCH_LABEL": "Pogled v tvojo zbirko",
   "COLLECTION_SEARCH_NO_RESULTS": "Nič nisem našel v tvoji kolekciji",
   "COLLECTION_SEARCH_WELCOME": "Vpiši nekaj za iskanje v tvoji kolekciji",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Tukaj je zadnji shranjeni avtor",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Here is the latest artist saved by you",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Here is the latest track saved by you",
+  "COLLECTION_TRACKS_SUBHEADER": "Tukaj so shranjene pesmi",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Ali res hočeš izbrisati to pesem?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Ali hočeš izbrisati to?",
   "COMING_UP": "Naslednje",
   "DATE_ADDED": "Po datumu prenosa",
   "DELETE": "Izbriši",
   "DELETE_TRACK": "Izbriši pesem",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD STREŽNIK",
   "DOWNLOAD_UPDATE": "PRENESI POSODOBITEV",
   "ENABLE_125_SCALING": "Vključi 125% povečavo.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Tvoja nedavna iskanja",
   "SEARCH_NO_RECENT_SEARCHES": "Tvoji nedavni prenosi so tukaj",
   "SEARCH_RESULT_LOADER_LABEL": "Pridobivanje tvoje glasbe...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Izbrani direktoriji:",
   "SELECTED_DIRECTORY": "Izbran direktorij:",
   "SETTING": "Nastavitve",
