--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Artister",
   "ARTIST_SINGLE": "Artist",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A till Ö",
   "BUFFERING": "Buffrar...",
   "CANCEL": "AVBRYT",
   "COLLECTION": "Samling",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Vill du avlägsna detta album sparat på din enhet?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Är du säker?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Lite information om albumet",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Vill du radera denna spellista?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Är du säker?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Låtar från albumet",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Vill du avlägsna denna låt sparad på din enhet?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Är du säker?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Vill du avlägsna detta album sparat på din enhet?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Är du säker?",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Din lokala musik synkas.\nInte en god ide' att stänga applikationen.",
+  "COLLECTION_INFO_SUBHEADER": "Lite information om albumet",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Fler album",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Fler artister",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Fler låtar",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Vill du radera denna spellista?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Är du säker?",
   "COLLECTION_SEARCH_LABEL": "Leta i din samling",
   "COLLECTION_SEARCH_NO_RESULTS": "Inget sådant fanns i din samling",
   "COLLECTION_SEARCH_WELCOME": "Skriv något för att söka i din samling",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Senaste album",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Senaste artist",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Senaste låt",
+  "COLLECTION_TRACKS_SUBHEADER": "Låtar från albumet",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Vill du avlägsna denna låt sparad på din enhet?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Är du säker?",
   "COMING_UP": "Coming Up",
   "DATE_ADDED": "Datum tillagd",
   "DELETE": "Radera",
   "DELETE_TRACK": "Radera låt",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
   "DOWNLOAD_UPDATE": "LADDA NER UPPDATERING",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Dina senaste sökningar",
   "SEARCH_NO_RECENT_SEARCHES": "Dina senaste sökningar visas här",
   "SEARCH_RESULT_LOADER_LABEL": "Hämtar din musik...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Valda kataloger:",
   "SELECTED_DIRECTORY": "Vald katalog:",
   "SETTING": "Inställningar",
