--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "专辑",
   "ARTIST": "艺术家",
   "ARTIST_SINGLE": "艺术家",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A 到 Z",
   "BUFFERING": "缓冲中...",
   "CANCEL": "取消",
   "COLLECTION": "收藏",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的专辑吗？",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "关于专辑",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "您确定删除该播放列表吗?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "您确定吗?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "专辑中歌曲",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的歌曲吗?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "您确定吗?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的专辑吗？",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "您确定吗?",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "您本地的音乐同步中。\n现在请不要关闭应用。",
+  "COLLECTION_INFO_SUBHEADER": "关于专辑",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "更多专辑",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "更多艺术家",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "更多歌曲",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "您确定删除该播放列表吗?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "您确定吗?",
   "COLLECTION_SEARCH_LABEL": "查找您的目录中",
   "COLLECTION_SEARCH_NO_RESULTS": "在您的收藏夹中未搜到结果",
   "COLLECTION_SEARCH_WELCOME": "从您的收藏中搜索",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "最新专辑",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "最新艺术家",
   "COLLECTION_TOP_SUBHEADER_TRACK": "最新歌曲",
+  "COLLECTION_TRACKS_SUBHEADER": "专辑中歌曲",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "您确定删除已经保存在您设备上的歌曲吗?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "您确定吗?",
   "COMING_UP": "开发中",
   "DATE_ADDED": "添加日期",
   "DELETE": "删除",
   "DELETE_TRACK": "删除歌曲",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD 服务器",
   "DOWNLOAD_UPDATE": "下载更新",
   "ENABLE_125_SCALING": "开启 125% 缩放。",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "您最近搜索记录",
   "SEARCH_NO_RECENT_SEARCHES": "您最近的搜索记录显示在这里",
   "SEARCH_RESULT_LOADER_LABEL": "获取您的音乐中...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "已选择目录：",
   "SELECTED_DIRECTORY": "已选择目录：",
   "SETTING": "设置",
