--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Künstler",
   "ARTIST_SINGLE": "Artist",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A to Z",
   "BUFFERING": "Buffering...",
   "CANCEL": "CANCEL",
   "COLLECTION": "Sammlung",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Löschen - Sicher...?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Dieses Album löschen ?",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Einige Einblicke in das Album",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Do you want to remove this playlist saved on your device?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Are you sure?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Hier sind die Songs, die Sie gespeichert haben",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Möchten Sie diesen auf Ihrem Gerät gespeicherten Song entfernen?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Song löschen?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Löschen - Sicher...?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Dieses Album löschen ?",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "COLLECTION_INFO_SUBHEADER": "Einige Einblicke in das Album",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Hier sind Ihre anderen Alben",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Here are the artists saved on your device.",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Here are your other tracks",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Do you want to remove this playlist saved on your device?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Are you sure?",
   "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
   "COLLECTION_SEARCH_NO_RESULTS": "Nothing like that could be found in your collection",
   "COLLECTION_SEARCH_WELCOME": "Enter something to search in your collection",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Hier ist das letzte von Ihnen gespeicherte Album",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Here is the latest artist saved by you",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Here is the latest track saved by you",
+  "COLLECTION_TRACKS_SUBHEADER": "Hier sind die Songs, die Sie gespeichert haben",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Möchten Sie diesen auf Ihrem Gerät gespeicherten Song entfernen?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Wollen Sie diesen Song löschen?",
   "COMING_UP": "Coming Up",
   "DATE_ADDED": "Date Added",
   "DELETE": "Delete",
   "DELETE_TRACK": "Song löschen",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD SERVER",
   "DOWNLOAD_UPDATE": "UPDATE DOWNLOADEN",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Ihre letzten Suchen",
   "SEARCH_NO_RECENT_SEARCHES": "Your recent searches will show here",
   "SEARCH_RESULT_LOADER_LABEL": "Musik laden...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Selected directories:",
   "SELECTED_DIRECTORY": "Selected directory:",
   "SETTING": "Einstellungen",
