--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "アルバム",
   "ARTIST": "アーティスト",
   "ARTIST_SINGLE": "アーティスト",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "A から Z",
   "BUFFERING": "バッファしています...",
   "CANCEL": "キャンセル",
   "COLLECTION": "コレクション",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "端末に保存されているアルバムを削除しますか？",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "削除しますか？",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "アルバムについて",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "このプレイリストを削除しますか？",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "削除しますか？",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "トラック",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "端末に保存されているトラックを削除しますか？",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "削除しますか？",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "端末に保存されているアルバムを削除しますか？",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "削除しますか？",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "端末の音楽を同期中。\nアプリを終了しないでください。",
+  "COLLECTION_INFO_SUBHEADER": "アルバムについて",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "アルバムをもっと見る",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "アーティストをもっと見る",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "トラックをもっと見る",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "このプレイリストを削除しますか？",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "削除しますか？",
   "COLLECTION_SEARCH_LABEL": "コレクションから検索",
   "COLLECTION_SEARCH_NO_RESULTS": "コレクションからは見つかりませんでした",
   "COLLECTION_SEARCH_WELCOME": "アルバムとトラック、アーティストを検索...",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "最新のアルバム",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "最新のアーティスト",
   "COLLECTION_TOP_SUBHEADER_TRACK": "最新のトラック",
+  "COLLECTION_TRACKS_SUBHEADER": "トラック",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "端末に保存されているトラックを削除しますか？",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "削除しますか？",
   "COMING_UP": "開発中",
   "DATE_ADDED": "追加日時",
   "DELETE": "削除",
   "DELETE_TRACK": "トラックを削除",
+  "DESCENDING": "Descending",
   "DISCORD": "Discordサーバー",
   "DOWNLOAD_UPDATE": "アップデートをダウンロード",
   "ENABLE_125_SCALING": "125% スケーリングを有効化",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "最近の検索",
   "SEARCH_NO_RECENT_SEARCHES": "ここに最近の検索が表示されます",
   "SEARCH_RESULT_LOADER_LABEL": "音楽を取得中...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "これらが見つかりました",
   "SELECTED_DIRECTORY": "フォルダを選択:",
   "SETTING": "設定",
