--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -9,23 +9,21 @@
   "ALBUM_SINGLE": "Album",
   "ARTIST": "Исполнители",
   "ARTIST_SINGLE": "Artist",
+  "ASCENDING": "Ascending",
   "A_TO_Z": "По алфавиту",
   "BUFFERING": "Buffering...",
   "CANCEL": "ОТМЕНА",
   "COLLECTION": "Коллекция",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_BODY": "Вы действительно хотите удалить альбом?",
-  "COLLECTION_ALBUM_ALBUM_DELETE_DIALOG_HEADER": "Удалить альбом",
-  "COLLECTION_ALBUM_INFO_SUBHEADER": "Немного об альбоме",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_BODY": "Хотите удалить плейлист?",
-  "COLLECTION_ALBUM_PLAYLIST_DELETE_DIALOG_HEADER": "Вы уверены?",
-  "COLLECTION_ALBUM_TRACKS_SUBHEADER": "Сохранённые треки",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
-  "COLLECTION_ALBUM_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
+  "COLLECTION_ALBUM_DELETE_DIALOG_BODY": "Вы действительно хотите удалить альбом?",
+  "COLLECTION_ALBUM_DELETE_DIALOG_HEADER": "Удалить альбом",
   "COLLECTION_INDEXING_HINT": "Adding your music ...",
   "COLLECTION_INDEXING_LABEL": "Your local music is being synced.\nIt's not a good idea to close the app.",
+  "COLLECTION_INFO_SUBHEADER": "Немного об альбоме",
   "COLLECTION_OTHER_SUBHEADER_ALBUM": "Другие альбомы",
   "COLLECTION_OTHER_SUBHEADER_ARTIST": "Другие исполнители",
   "COLLECTION_OTHER_SUBHEADER_TRACK": "Другие треки",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_BODY": "Хотите удалить плейлист?",
+  "COLLECTION_PLAYLIST_DELETE_DIALOG_HEADER": "Вы уверены?",
   "COLLECTION_SEARCH_LABEL": "Lookup in your collection",
   "COLLECTION_SEARCH_NO_RESULTS": "В коллекции ничего не найдено",
   "COLLECTION_SEARCH_WELCOME": "Поиск среди загруженных треков",
@@ -33,10 +31,14 @@
   "COLLECTION_TOP_SUBHEADER_ALBUM": "Последний сохранённый альбом",
   "COLLECTION_TOP_SUBHEADER_ARTIST": "Последний сохранённый исполнитель",
   "COLLECTION_TOP_SUBHEADER_TRACK": "Последний сохранённый трек",
+  "COLLECTION_TRACKS_SUBHEADER": "Сохранённые треки",
+  "COLLECTION_TRACK_DELETE_DIALOG_BODY": "Вы действительно хотите удалить сохранённый трек?",
+  "COLLECTION_TRACK_DELETE_DIALOG_HEADER": "Удалить трек",
   "COMING_UP": "Coming Up",
   "DATE_ADDED": "По дате добавления",
   "DELETE": "Удалить",
   "DELETE_TRACK": "Удалить трек",
+  "DESCENDING": "Descending",
   "DISCORD": "DISCORD",
   "DOWNLOAD_UPDATE": "СКАЧАТЬ ОБНОВЛЕНИЕ",
   "ENABLE_125_SCALING": "Enable 125% scaling.",
@@ -86,7 +88,8 @@
   "SEARCH_HISTORY_SUBHEADER": "Недавние запросы",
   "SEARCH_NO_RECENT_SEARCHES": "Здесь появится история поиска",
   "SEARCH_RESULT_LOADER_LABEL": "Получаем музыку...",
-  "SEARCH_WELCOME": "Search Harmonoid ...",
+  "SEARCH_WELCOME": "Search Harmonoid...",
+  "SEE_ALL": "See All",
   "SELECTED_DIRECTORIES": "Selected directories:",
   "SELECTED_DIRECTORY": "Selected directory:",
   "SETTING": "Настройки",
