🌐 Update constant strings

--- a/assets/translations/en_US.json
+++ b/assets/translations/en_US.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "Change the app to light or dark mode",
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Share",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Switch theme",
