--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "Changez l'application en mode clair ou sombre",
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Partager",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Debut de lecture",
   "SWITCH_THEME": "Changer de theme",
