--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "ऐप को लाइट या डार्क मोड में यूज़ करें",
   "SETTING_THEME_TITLE": "ऐप मोड",
   "SHARE": "शेयर",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "प्लेबैक शुरू हो रहा है",
   "SWITCH_THEME": "थीम बदलें",
