--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "Világos vagy sötét módot állíthatsz be",
   "SETTING_THEME_TITLE": "Téma",
   "SHARE": "Megosztás",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Lejátszás indítása...",
   "SWITCH_THEME": "Téma váltása",
