--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "アプリのテーマをライトまたはダークに変更します",
   "SETTING_THEME_TITLE": "テーマ",
   "SHARE": "共有",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "再生開始",
   "SWITCH_THEME": "テーマを変更",
