--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "Ovao ny fampiharana ho maivana na ho maizina",
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Zaraina",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Fanombohana ny famakiana",
   "SWITCH_THEME": "Hanova lohahevitra",
