--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "Verander de app naar lichte of donkere modus",
   "SETTING_THEME_TITLE": "Thema",
   "SHARE": "Delen",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Afspelen starten",
   "SWITCH_THEME": "Wissel Thema",
