--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "Mude o tema do aplicativo para claro ou escuro",
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Compartilhar",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Trocar tema",
