--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "Menjaj med temnim in svetlim načinom",
   "SETTING_THEME_TITLE": "Način",
   "SHARE": "Deli",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Začenjam predvajanje",
   "SWITCH_THEME": "Zamenjaj temo",
