--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "切换应用至明亮或暗色主题",
   "SETTING_THEME_TITLE": "主题",
   "SHARE": "分享",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "开启播放中",
   "SWITCH_THEME": "切换主题",
