--- a/assets/translations/de_DE.json
+++ b/assets/translations/de_DE.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "Ändern Sie die App im Light-Mode oder Dark-Mode",
   "SETTING_THEME_TITLE": "Theme",
   "SHARE": "Share",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Starting playback",
   "SWITCH_THEME": "Switch Theme",
