--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -122,6 +122,7 @@
   "SETTING_THEME_SUBTITLE": "Ändra applikationen till ljust eller mörkt läge",
   "SETTING_THEME_TITLE": "Tema",
   "SHARE": "Dela",
+  "SHOW_ALBUM": "Show album",
   "SORT_BY": "Sort By",
   "STARTING_PLAYBACK": "Startar uppspelning",
   "SWITCH_THEME": "Byt tema",
