--- a/assets/translations/fr_FR.json
+++ b/assets/translations/fr_FR.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "Paroles non trouvées.",
   "LYRICS_RETRIEVING": "Récupération des paroles ...",
   "MENU": "Menu",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "NON",
   "NOTIFICATION_LYRICS_SUBTITLE": "Afficher les paroles dans une notification.",
   "NOTIFICATION_LYRICS_TITLE": "Notification de Paroles",
