--- a/assets/translations/hi_IN.json
+++ b/assets/translations/hi_IN.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "गाने के बोल नहीं मिले",
   "LYRICS_RETRIEVING": "गाने के बोल पुनः प्राप्त किये जा रहे है...",
   "MENU": "मेन्यू",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "नहीं",
   "NOTIFICATION_LYRICS_SUBTITLE": "अधिसूचना में गाने के बोल दिखाएं।",
   "NOTIFICATION_LYRICS_TITLE": "गाने के बोल की अधिसूचना",
