--- a/assets/translations/hu_HU.json
+++ b/assets/translations/hu_HU.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "Nem található énekszöveg.",
   "LYRICS_RETRIEVING": "Énekszöveg betöltése...",
   "MENU": "Menü",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "NEM",
   "NOTIFICATION_LYRICS_SUBTITLE": "Énekszöveg megjelenítése értesítésként.",
   "NOTIFICATION_LYRICS_TITLE": "Énekszöveg értesítésben",
