--- a/assets/translations/ja_JP.json
+++ b/assets/translations/ja_JP.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "歌詞が見つかりませんでした。",
   "LYRICS_RETRIEVING": "歌詞を受信中...",
   "MENU": "メニュー",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "いいえ",
   "NOTIFICATION_LYRICS_SUBTITLE": "歌詞を通知パネルに表示する",
   "NOTIFICATION_LYRICS_TITLE": "歌詞を通知に表示",
