--- a/assets/translations/mg_MG.json
+++ b/assets/translations/mg_MG.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "Tsy hita ilay tonon-kira.",
   "LYRICS_RETRIEVING": "Famerenana tonon-kira ...",
   "MENU": "Menu",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "TSIA",
   "NOTIFICATION_LYRICS_SUBTITLE": "Asehoy ny tonon-kira amin'ny fampandrenesana.",
   "NOTIFICATION_LYRICS_TITLE": "Fampahafantarana tonon-kira",
