--- a/assets/translations/nl_NL.json
+++ b/assets/translations/nl_NL.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "Songteksten niet gevonden.",
   "LYRICS_RETRIEVING": "Songteksten ophalen...",
   "MENU": "Menu",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "NEE",
   "NOTIFICATION_LYRICS_SUBTITLE": "Songteksten weergeven in notficaties",
   "NOTIFICATION_LYRICS_TITLE": "Notificatie songteksten",
