--- a/assets/translations/pt_BR.json
+++ b/assets/translations/pt_BR.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "Letras não disponíveis.",
   "LYRICS_RETRIEVING": "Baixando letras...",
   "MENU": "Menu",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "NÃO",
   "NOTIFICATION_LYRICS_SUBTITLE": "Mostrar letras numa notificação.",
   "NOTIFICATION_LYRICS_TITLE": "Letras nas notificações",
