--- a/assets/translations/sl_SI.json
+++ b/assets/translations/sl_SI.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "Besedilo pesmi ni bilo najdeno.",
   "LYRICS_RETRIEVING": "Pridobivanje besedila pesmi...",
   "MENU": "Meni",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "NE",
   "NOTIFICATION_LYRICS_SUBTITLE": "Pokaži besedilo pesmi v obvestilih.",
   "NOTIFICATION_LYRICS_TITLE": "Besedilo pesmi v obvestilu",
