--- a/assets/translations/sv_SE.json
+++ b/assets/translations/sv_SE.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "Låttexter inte funna.",
   "LYRICS_RETRIEVING": "Hämtar låttexter...",
   "MENU": "Meny",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "NEJ",
   "NOTIFICATION_LYRICS_SUBTITLE": "Visa låttexter i en avisering.",
   "NOTIFICATION_LYRICS_TITLE": "Avisering låttexter",
