--- a/assets/translations/zh_CN.json
+++ b/assets/translations/zh_CN.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "歌词未找到。",
   "LYRICS_RETRIEVING": "获取歌词中...",
   "MENU": "菜单",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "否",
   "NOTIFICATION_LYRICS_SUBTITLE": "在通知栏显示歌词。",
   "NOTIFICATION_LYRICS_TITLE": "通知栏歌词",
