--- a/assets/translations/ru_RU.json
+++ b/assets/translations/ru_RU.json
@@ -52,6 +52,7 @@
   "LYRICS_NOT_FOUND": "Lyrics not found.",
   "LYRICS_RETRIEVING": "Retrieving lyrics...",
   "MENU": "Меню",
+  "M_TRACKS_AND_N_ALBUMS": "M tracks & N albums",
   "NO": "НЕТ",
   "NOTIFICATION_LYRICS_SUBTITLE": "Show lyrics in a notification.",
   "NOTIFICATION_LYRICS_TITLE": "Notification lyrics",
